cmake_minimum_required(VERSION 3.27)
project(romanToInteger)

set(CMAKE_CXX_STANDARD 17)

add_executable(romanToInteger
        romanToInteger.cpp
        testClass.cpp
        testClass.h
        February2024/array_v.cpp
        February2024/array_v2.cpp
        February2024/class.cpp
        February2024/const_v1.cpp
        February2024/class_v2.cpp
        February2024/pointers.cpp
        February2024/pointers_v1.cpp
        romanToInteger_v1.cpp
        February2024/malloc.cpp
        February2024/time.cpp
        February2024/time.cpp
        February2024/splitInt.cpp
        February2024/splitInt_v1.cpp)
